--- a/src/app/day-shedule/day-shedule.component.html
+++ b/src/app/day-shedule/day-shedule.component.html
@@ -3,12 +3,12 @@
     class="event"
     *ngFor="let event of eventsArray"
     [class.high]="event.priority === 'high'"
+    [class.low]="event.priority === 'low'"
+    [class.normal]="event.priority === 'normal'"
   >
-    <p>{{event.timeFrom}}</p>
-    <p>{{event.timeTo}}</p>
-    <p>{{event.title}}</p>
-    <p>{{event.priority}}</p>
-    <p>{{event.eventId}}</p>
+    <p class="time-from">{{event.timeFrom}}</p>
+    <p class="time-to">{{event.timeTo}}</p>
+    <p class="title">{{event.title}}</p>
     <button class="delete" >Delete</button>
     <a [routerLink]="['./',event.timeFrom]"><button class="edit" >Edit</button></a>
    
