--- a/src/app/event-redactor/event-redactor.component.html
+++ b/src/app/event-redactor/event-redactor.component.html
@@ -2,46 +2,72 @@
   
   <h1 class="event-title">Day, from</h1>
   
-  <label >Time from: <input required name="name" type="time"
-     id="timeFrom" 
+  <label class="time-from">Time from:
+    <input required 
+     name="name"
+     type="time"
      formControlName="timeFrom" 
      [value] ="dataForForm.timeFrom"
-     minlength="4"
-     
-     /></label>
+     minlength="4">
+  </label>
   
-  <label for="timeTo">Time to: <input required type="time" id="timeTo" formControlName="timeTo" [value] ="dataForForm.timeTo"/></label>
+  <label class = "time-to" for="timeTo">Time to:
+    <input required
+    type="time"
+    id="timeTo"
+    formControlName="timeTo"
+    [value] ="dataForForm.timeTo">
+  </label>
   
-  <label for="title">Title:<input required id="title" type="text" formControlName="title" [value] ="dataForForm.title"/></label>
+  <label for="title" class="title">Title:
+    <input required
+    id="title"
+    type="text"
+    formControlName="title"
+    [value]="dataForForm.title"
+    maxlength="35">
+  </label>
 
-  <label for="comment">Title:<textarea formControlName="comment" [value] ="dataForForm.comment" minlength="4"></textarea></label>
+  <label for="comment" class="comment">Comment:
+    <textarea formControlName="comment"
+    [value] ="dataForForm.comment"
+    rows="5"></textarea>
+  </label>
   
   <h3>Priority</h3>
-  <div>
+  <div class="priority-buttons-block">
+    <label for="contactChoice1">
     <input
       type="radio"
       value="high"
+      name = "priority"
       formControlName="priority"
       [checked] = "dataForForm.priority==='high'"
       />
-    <label for="contactChoice1">High</label>
+   High</label>
 
+    <label for="normal"> 
     <input
       type="radio"
       value="normal"
+      name = "priority"
       formControlName="priority"
       [checked] = "dataForForm.priority==='normal'||dataForForm.priority===''"
       />
-    <label for="normal">Normal</label>
+     Normal</label>
 
+    <label for="low">
     <input
       type="radio"
       value="low"
+      name = "priority"
       formControlName="priority"
       [checked] = "dataForForm.priority==='low'"
       />
-    <label for="low">Low</label>
+    Low</label>
   </div>
-  <input type="submit" value="Save" (click)="addEvent()">
-  <button [routerLink]="['../']">Back</button>
+  <div class="form-button-block">
+    <button value="Save" (click)="addEvent()">Save</button>
+    <button [routerLink]="['../']">Back</button>
+  </div>  
 </form>
