--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,8 +1,89 @@
-.bar{
-    width:100%;
-    
-    outline: 1px solid red;
-    color:black;
-    font-size: 50px;
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+  }
 
-}
+  p{
+    font-size: 2em;
+    padding:0px;
+    line-height:0.9;
+    margin:10px;
+   }
+  
+  .header{
+    width:100%;
+    min-height:190px;
+    background-color: #bbded6;
+    font-weight: bold;
+    border: 1px solid transparent;
+    position:relative;
+    .infoblock{
+      position: absolute;               
+      top: 50%;                         
+      transform: translate(0, -50%);
+      right:2%;
+      text-align: right;
+    }
+    
+  }
+  
+  .login-form{
+    display:flex;
+    align-items: center;
+    padding:0px;
+    flex-wrap:wrap;
+        
+  }
+  
+  label{
+    display:flex;
+    align-items:center;
+    border:1px solid transparent;
+    margin-left:15px;
+    max-width:200px;
+    p{
+      width:60px;
+      font-size:12px;
+    }
+    input{
+      margin-left:15px;
+      line-height:20px;
+      width:50%;
+    } 
+  }
+  
+  
+   
+  
+  
+  button{
+    margin-left:15px;
+    padding:5px;
+  }
+  
+  .username{
+    display:none;
+    position:relative;
+    height:26px;
+    button{
+      vertical-align: middle;
+    }
+    .logout{
+      margin-bottom:10px;
+    }
+    
+  }
+  
+  
+  .show{
+    display:block;
+  }
+  
+  .hide{
+    display:none;  
+  }
+  
+  .logout{
+    margin:3px;
+  }
