--- a/src/app/day-shedule/day-shedule.component.css
+++ b/src/app/day-shedule/day-shedule.component.css
@@ -5,6 +5,13 @@
           box-sizing: border-box;
 }
 
+.events{
+  max-width:1200px;
+  margin-left:auto;
+  margin-right:auto;
+
+}
+
 .event {
   margin: 15px 10px;
   display: -webkit-box;
@@ -14,6 +21,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  background-color: lightgray;
 }
 
 .event .time-from {
