--- a/src/app/calendar-panel/calendar-panel.component.html
+++ b/src/app/calendar-panel/calendar-panel.component.html
@@ -14,12 +14,10 @@
               </p>
               <p class="events-name">Events</p>
               <div class="events-panel">
-                
-                
-                  <div class="event-symbol red"></div>
-                  <div class="event-symbol green"></div>
-                  <div class="event-symbol yellow"></div>
-                
+                  <div class="events-container" *ngFor = "let event of day.events">
+                    <div  class="event-symbol" class = "high"></div>
+                  </div>
+                                  
               </div>
             </a>
         </div>
