--- a/src/app/calendar-panel/calendar-panel.component.scss
+++ b/src/app/calendar-panel/calendar-panel.component.scss
@@ -63,6 +63,11 @@
     z-index:100;
   }
   
+  .events-name{
+    position:absolute;
+    bottom:45px;
+    left:2%;
+  }
   
   
   .events-panel{
@@ -72,29 +77,19 @@
     width:100%;
     display:flex;
     flex-wrap:wrap;
-    .event-symbol{
+    .events-container{
+        margin:2%;
+        width:20%;
         height:50%;
-        width:10%;
-        &.high{
-            background-color:#ffb6b9;
-          }
-          
-        &.normal{
-            background-color: #FFF5C3;
-          }
-          
-        &.low{
-            background-color: #D3E397;
-        }
+        background-color: #696969;
     }
-  }
+
+    
+        
   
-  .events-name{
-    position:absolute;
-    bottom:45px;
-    left:2%;
-  }
+  
+  
   
   
     
-  
+}
