--- a/src/app/day-shedule/day-shedule.component.html
+++ b/src/app/day-shedule/day-shedule.component.html
@@ -1,6 +1,7 @@
 <div class="events">
-  <div
-    class="event"
+  <h2>Events list for {{this.dayWeekDay}} {{this.dayMonth}} {{this.dayYear}}</h2>
+
+  <div class="event"
     *ngFor="let event of eventsArray"
     [class.high]="event.priority === 'high'"
     [class.low]="event.priority === 'low'"
@@ -9,8 +10,8 @@
     <p class="time-from">{{event.timeFrom}}</p>
     <p class="time-to">{{event.timeTo}}</p>
     <p class="title">{{event.title}}</p>
-    <button class="delete" >Delete</button>
-    <a [routerLink]="['./',event.timeFrom]"><button class="edit" >Edit</button></a>
+    <button class="delete" (click) = "deleteEvent(event.timeFrom)">Delete</button>
+    <a (click)="notAvalble()"><button class="edit" >Edit</button></a>
    
   </div>
   <a [routerLink]="['../../']" class = "back-button"> <button>Back to calendar</button></a>
