--- a/src/app/day-shedule/day-shedule.component.scss
+++ b/src/app/day-shedule/day-shedule.component.scss
@@ -9,6 +9,7 @@
     display:flex;
     font-weight:bold;
     justify-content: center;
+    background-color: lightgray;
     .time-from{
         width:100px;
     }
