--- a/src/app/event-editor/event-editor.component.html
+++ b/src/app/event-editor/event-editor.component.html
@@ -6,7 +6,7 @@
       <input required 
        name="name"
        type="time"
-       formControlName="timeFrom" 
+       formControlName="From" 
        [value] ="dataForForm.timeFrom"
        minlength="4">
     </label>
@@ -15,19 +15,23 @@
       <input required
       type="time"
       id="timeTo"
-      formControlName="timeTo">
+      formControlName="To"
+      [value] ="dataForForm.timeTo">
+      
     </label>
     
     <label for="title" class="title">Title:
       <input required
       id="title"
       type="text"
-      formControlName="title"
-      maxlength="35">
+      formControlName="tit"
+      maxlength="35"
+      [value] ="dataForForm.title">
     </label>
   
     <label for="comment" class="comment">Comment:
       <textarea formControlName="comment"
+      [value] ="dataForForm.comment"
       rows="5"></textarea>
     </label>
     
@@ -38,7 +42,7 @@
         type="radio"
         value="high"
         name = "priority"
-        formControlName="priority"
+        formControlName="prior"
         [checked] = "dataForForm.priority==='high'"
         />
      High</label>
@@ -48,6 +52,7 @@
         type="radio"
         value="normal"
         name = "priority"
+        [checked] = "dataForForm.priority==='normal'||dataForForm.priority===''"
         formControlName="priority">
        Normal</label>
   
@@ -62,7 +67,7 @@
       Low</label>
     </div>
     <div class="form-button-block">
-      <button value="Save" (click)="addEvent()">Save</button>
+      <button value="Save" (click)="editEvent()">Save</button>
       <button [routerLink]="['../']">Back</button>
     </div>  
   </form>
