--- a/src/app/event-redactor/event-redactor.component.html
+++ b/src/app/event-redactor/event-redactor.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="profileForm">
+<form [formGroup]="newEventForm">
   
   <h1 class="event-title">Day, from</h1>
   
@@ -7,7 +7,6 @@
      name="name"
      type="time"
      formControlName="timeFrom" 
-     [value] ="dataForForm.timeFrom"
      minlength="4">
   </label>
   
@@ -15,8 +14,7 @@
     <input required
     type="time"
     id="timeTo"
-    formControlName="timeTo"
-    [value] ="dataForForm.timeTo">
+    formControlName="timeTo">
   </label>
   
   <label for="title" class="title">Title:
@@ -24,13 +22,13 @@
     id="title"
     type="text"
     formControlName="title"
-    [value]="dataForForm.title"
+   
     maxlength="35">
   </label>
 
   <label for="comment" class="comment">Comment:
     <textarea formControlName="comment"
-    [value] ="dataForForm.comment"
+    
     rows="5"></textarea>
   </label>
   
@@ -42,17 +40,17 @@
       value="high"
       name = "priority"
       formControlName="priority"
-      [checked] = "dataForForm.priority==='high'"
       />
    High</label>
 
     <label for="normal"> 
     <input
+      checked
       type="radio"
       value="normal"
       name = "priority"
       formControlName="priority"
-      [checked] = "dataForForm.priority==='normal'||dataForForm.priority===''"
+      
       />
      Normal</label>
 
@@ -62,12 +60,12 @@
       value="low"
       name = "priority"
       formControlName="priority"
-      [checked] = "dataForForm.priority==='low'"
+     
       />
     Low</label>
   </div>
   <div class="form-button-block">
-    <button value="Save" (click)="addEvent()">Save</button>
+    <button value="Save" (click)="addEvent()">Add</button>
     <button [routerLink]="['../']">Back</button>
   </div>  
 </form>
