--- a/src/app/navigation-buttons/navigation-buttons.component.html
+++ b/src/app/navigation-buttons/navigation-buttons.component.html
@@ -10,6 +10,7 @@
     <div class="year">{{currentYear}}</div>
     <button class="switcher right" (click) = "rightYearSwither()">></button>
 </div>
+    <button class="current-month" (click) = "currentMonthSwitcher()">Current month</button>
 </div>
 <app-calendar-panel [currentMonthNumber]="currentMonthNumber" [currentYear]="currentYear"></app-calendar-panel>
 
