--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -1,33 +1,33 @@
-<form [formGroup]="newUser">
+<form [formGroup]="newUserForm">
   
     <h1 class="new-user-title">New User</h1>
     
     <label for="login" class="login">Login:
       <input required
+      formControlName="userLogin"
       id="login"
       type="text"
-      formControlName="login"
       maxlength="35">
     </label>
     
     <label for="password" class="password">Password:
-      <input required
+      <input
+      formControlName="password"
       id="password"
       type="password"
-      formControlName="password"
       maxlength="35">
     </label>
   
     <label for="password" class="confirm-password">Confirm Password:
-      <input required
+      <input 
+      formControlName="confirmPassword"
       id="password"
       type="password"
-      formControlName="password"
       maxlength="35">
     </label>
    
     <div class="form-button-block">
-      <button value="Save" (click)="addEvent()">Save</button>
+      <button value="Save" (click)="createNewUser()">Save</button>
       <button [routerLink]="['../']">Back</button>
     </div>  
   </form>
