Update calendar task, start of solution rebuild

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,27 +3,13 @@
      
       
     <p class = "date">
-        {{currentDate.currentDay}} {{currentDate.currentMonth}} {{currentDate.currentYear}}
+        {{currentDate | date: 'longDate'}}
+        {{currentTime | async | date: 'h:mm:ss' }}
     </p>
   
-    <div class="time">
-       <p>{{currentDate.currentHours}}:{{currentDate.currentMinutes}}</p>
+        
     </div>
   
-     <form class = "login-form" [class.hide]="confirmed" [formGroup]="loginForm">
-           <label><p>Login</p><input type="text" class="name" formControlName="login"></label>
-            <label><p>Password</p> <input type="password" class="name" formControlName="password"></label>
-            <div class="button-block">
-              <button (click)="login()" [routerLink]="['']">Login</button>
-              <button [routerLink]="['/newUser']">New User</button>
-            </div>
-     </form>
-    <div class = "hello-user-block" >
-    <p class = "username" [class.show]="confirmed"> {{ currentUser}}'s calendar
-      <button class="logout" (click)="logout()">Logout</button>
-    </p>
-    </div>
-    </div>
   </div>
   
   
