Update calendar structure, calendar service add, broken swiss clocks add

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,10 +4,10 @@
       
     <p class = "date">
         {{currentDate | date: 'longDate'}}
-        {{currentTime | async | date: 'h:mm:ss' }}
+        {{swissTime | date: 'hh:mm:ss'}}
     </p>
   
-        
+    
     </div>
   
   </div>
