--- a/src/app/main-shedule/buttons/buttons.component.html
+++ b/src/app/main-shedule/buttons/buttons.component.html
@@ -12,3 +12,5 @@
  </div>
      <button class="current-month" (click) = "currentMonthSwitcher()">Current month</button>
  </div>
+
+ <app-shedule-panel [currentYear]='currentYear' [currentMonthNumber]='currentMonthNumber'></app-shedule-panel>
