--- a/src/app/main-shedule/day/day.component.html
+++ b/src/app/main-shedule/day/day.component.html
@@ -1,10 +1,10 @@
 <div class="day">
     <p class="day-number">
-      Day
+      {{ dayNumber }}
     </p>
     <p class="events-name">Events</p>
     <div class="events-panel">
-        <div class="events-container" *ngFor = "let event of day.events">
+        <div class="events-container">
           <div  class="event-symbol" class = "high"></div>
         </div>
     </div>
