Update calendar markup, add inherit chain from buttons to days. add hover effect by directive

--- a/src/app/main-shedule/day/day.component.css
+++ b/src/app/main-shedule/day/day.component.css
@@ -1,1 +1,24 @@
-/* No CSS *//*# sourceMappingURL=day.component.css.map */
+:host {
+  margin: 0px;
+  padding: 0px;
+}
+
+.day {
+  width: 100%;
+  height: 100%;
+  background-color: #81ada0;
+  border: 1px solid #0b272d;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.day .day-number {
+  font-size: 80px;
+  font-weight: bold;
+  margin: 0px;
+}
+
+.day .events-name {
+  margin-top: 0px;
+}
+/*# sourceMappingURL=day.component.css.map */
