--- a/src/app/main-shedule/day/day.component.html
+++ b/src/app/main-shedule/day/day.component.html
@@ -1,8 +1,8 @@
-<div class="day">
-    <p class="day-number">
+<div class="day" hoverDay>
+    <p class="day-number" *ngIf="dayNumber!==''">
       {{ dayNumber }}
     </p>
-    <p class="events-name">Events</p>
+    <p class="events-name" *ngIf="dayNumber!==''">Events</p>
     <div class="events-panel">
         <div class="events-container">
           <div  class="event-symbol" class = "high"></div>
