--- a/src/app/day-shedule/day-shedule.component.html
+++ b/src/app/day-shedule/day-shedule.component.html
@@ -1,6 +1,3 @@
-<button>Back</button>
-<button>Add new</button>
+<router-outlet></router-outlet>
 
-<app-events-list></app-events-list>
-<app-edit-event-form></app-edit-event-form>
 
