--- a/src/app/day-shedule/single-event/single-event.component.html
+++ b/src/app/day-shedule/single-event/single-event.component.html
@@ -12,6 +12,6 @@
   {{singleEvent.priority}}
   </p>
 
-  <button>Delete</button>
-  <button>Edit</button>
+  <button (click) = "deleteEvent()">Delete</button>
+  <button (click)="editEventFunc()">Edit</button>
 </div>  
