Update adding, editing and deleting of events

--- a/src/app/day-shedule/day-shedule-list/day-shedule-list.component.html
+++ b/src/app/day-shedule/day-shedule-list/day-shedule-list.component.html
@@ -1,3 +1,5 @@
+<p class="shedule-date-label">{{sheduleDay}}.{{sheduleMonth}}.{{sheduleYear}}</p>
+
 <button (click) = "goBack()">Back</button>
 <button (click) = "addRouting()">Add new</button>
 
