--- a/src/app/main-shedule/day/day.component.scss
+++ b/src/app/main-shedule/day/day.component.scss
@@ -18,6 +18,13 @@
     
     .events-name{
         margin-top: 0px;
+        margin-right: 5px;
+    }
+
+    .events-panel{
+        display:flex;
+        justify-content: flex-start;
+        margin: 0px 2px;
     }
 }
 
