Add server to work with local JSON data-base

--- a/src/app/day-shedule/day-shedule-list/day-shedule-list.component.html
+++ b/src/app/day-shedule/day-shedule-list/day-shedule-list.component.html
@@ -1,6 +1,11 @@
+<div class = "events-table">
+
 <p class="shedule-date-label">{{sheduleDay}}.{{sheduleMonth}}.{{sheduleYear}}</p>
 
 <button (click) = "goBack()">Back</button>
 <button (click) = "addRouting()">Add new</button>
-
+<div class = "events-list">
 <app-events-list></app-events-list>
+</div>
+
+</div>
