--- a/src/app/day-shedule/events-list/events-list.component.html
+++ b/src/app/day-shedule/events-list/events-list.component.html
@@ -1,5 +1,15 @@
 <div class = "events-list" >
 
-<app-single-event *ngFor = "let item of eventsDataBase" [singleEvent] = 'item' (emmited) = "ngOnInit()"></app-single-event>
+<div class = "event-table-header">
+    <p class="time-from-title">Time From</p>
+    <p class= "time-to-title">Time To</p>
+    <p class= "time-to-title">Title</p>
+    <p class= "delete-button"></p>
+    <p class= "edit-button"></p>
+</div>
+   
+<div class = "single-event" *ngFor = "let item of eventsDataBase" >
+<app-single-event [singleEvent] = 'item' (emmited) = "ngOnInit()"></app-single-event>
+</div>
 
 </div>
