--- a/src/app/main-shedule/day/day.component.scss
+++ b/src/app/main-shedule/day/day.component.scss
@@ -26,5 +26,12 @@
         justify-content: flex-start;
         margin: 0px 2px;
     }
+    .events-container{
+        display: flex;
+    }
+
+    .event-symbol{
+        font-size: 25px;
+    }
 }
 
