--- a/src/app/day-shedule/day-shedule-list/day-shedule-list.component.css
+++ b/src/app/day-shedule/day-shedule-list/day-shedule-list.component.css
@@ -1,3 +1,18 @@
-.shedule-date-label{
-    font-size: 30px;
+.shedule-date-label {
+  font-size: 30px;
 }
+
+.events-table {
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.events-table .events-list {
+  margin-top: 10px;
+}
+
+.events-table button {
+  margin: 10px;
+}
+/*# sourceMappingURL=day-shedule-list.component.css.map */
