--- a/src/app/main-shedule/day/day.component.html
+++ b/src/app/main-shedule/day/day.component.html
@@ -6,7 +6,7 @@
     <div class="events-panel">
       <p class="events-name" *ngIf="dayNumber!==''">Events</p>
         <div class="events-container">
-          <div  class="event-symbol" class = "high" *ngFor = "let item of eventsStatusArray">*</div>
+          <div  class="event-symbol" *ngFor = "let item of eventsStatusArray">*</div>
         </div>
     </div>
 </div>
