--- a/src/app/day-shedule/single-event/single-event.component.scss
+++ b/src/app/day-shedule/single-event/single-event.component.scss
@@ -2,6 +2,10 @@
     display:flex;
     justify-content: space-around;
     border: 1px solid #616161;
+    flex: 1;
+    button{
+      width:80px;
+    }
   }
 
   .high {
