Add editing and adding events functions throw custom server

--- a/src/app/day-shedule/day-shedule-list/day-shedule-list.component.html
+++ b/src/app/day-shedule/day-shedule-list/day-shedule-list.component.html
@@ -1,6 +1,6 @@
 <div class = "events-table">
 
-<p class="shedule-date-label">{{sheduleDay}}.{{sheduleMonth}}.{{sheduleYear}}</p>
+<p class="shedule-date-label">Events Date:{{sheduleDay}}.{{sheduleMonth}}.{{sheduleYear}}</p>
 
 <button (click) = "goBack()">Back</button>
 <button (click) = "addRouting()">Add new</button>
