--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,7 +5,7 @@
           box-sizing: border-box;
 }
 
-p {
+p, .name-title__title {
   font-size: 2em;
   padding: 0px;
   line-height: 0.9;
@@ -67,7 +67,7 @@ label input {
 
 button {
   margin-left: 15px;
-  padding: 5px;
+  padding: 8px 16px;
 }
 
 .username {
